# SensorServer

./: .gitignore  LICENSE  README.md  dockerfile  pyproject.toml  sensorserver.py  server.py
