[tool.poetry]
name = "sensorserver"
version = "0.1.0"
description = "simple temperature api"
authors = ["kensan <9150185+kensan23@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bme680 = "^1.0.5"
flask = "^1.1.2"
flask_restful = "^0.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
